@@ -1,9 +1,10 @@
-2009-03-30  Ben Finney  <ben+python@benfinney.id.au>
-
+2009-04-03  Ben Finney  <ben+python@benfinney.id.au>
+    
     * Register DaemonContext.close method for atexit processing.
     * Move PID file cleanup to close method.
     * Improve docstrings by reference to, and copy from, PEP 3143.
     * Use mock checking capabilities of newer ‘MiniMock’ library.
+    * Automate building a versioned distribution tarball.
 
 2009-03-26  Ben Finney  <ben+python@benfinney.id.au>
 
@@ -60,6 +61,7 @@
     * Refactor some functionality out to helper functions.
     * Begin unit test suite.
 
+
 Local variables:
 mode: change-log
 coding: utf-8
